--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>MLB Team Spinwheel</h1>
+        <h1>Spinwheel</h1>
+        <div class="input-section">
+            <input type="text" id="prompt-input" placeholder="Enter a prompt (e.g., 'MLB teams') or list (e.g., 'Pizza, Tacos, Burgers')">
+            <button id="generate-btn">Generate Wheel</button>
+        </div>
+        <div id="loading" class="loading hidden">Generating options...</div>
+        <div id="error" class="error hidden"></div>
         <div class="wheel-container">
             <canvas id="wheel" width="500" height="500"></canvas>
             <div class="spinner"></div>
