--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,6 +22,7 @@
         <button id="spin-btn">SPIN</button>
         <div id="result"></div>
     </div>
+    <script src="config.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
